engine/codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_resume_override_matches_rollout_model.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"First post-resume turn where pre-turn override sets model to rollout model; no model-switch update should appear.\",\n&[(\"Last Request Before Resume\", &initial_request),\n(\"First Request After Resume + Override\", &resumed_request),])"
---
Scenario: First post-resume turn where pre-turn override sets model to rollout model; no model-switch update should appear.

## Window 1
-- request 1 (turn; Last Request Before Resume) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer[2]:
    [01] <SKILLS_INSTRUCTIONS>
    [02] <PERMISSIONS_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    seed resume history
-- request 2 (turn; First Request After Resume + Override) --
04:message/assistant:
    recorded before resume
05:message/user:
    <ENVIRONMENT_CONTEXT>
06:message/user:
    first resumed turn after model override
