engine/codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_resume_with_personality_change.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"First post-resume turn where resumed config model differs from rollout and personality changes.\",\n&[(\"Last Request Before Resume\", &initial_request),\n(\"First Request After Resume\", &resumed_request),])"
---
Scenario: First post-resume turn where resumed config model differs from rollout and personality changes.

## Window 1
-- request 1 (turn; Last Request Before Resume) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer[2]:
    [01] <SKILLS_INSTRUCTIONS>
    [02] <PERMISSIONS_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    seed resume history

## Window 2 (after request 1: settings changed (model))
-- request 2 (turn; First Request After Resume) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer[2]:
    [01] <SKILLS_INSTRUCTIONS>
    [02] <PERMISSIONS_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    seed resume history
04:message/assistant:
    recorded before resume
05:message/developer:
    <MODEL_SWITCH>
06:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
07:message/user:
    <ENVIRONMENT_CONTEXT>
08:message/user:
    resume and change personality
